# payguard-public

./: .env.example  Dockerfile  README.md  README_DOCKER.md  docker-compose.prod.yml  fix_inline.py  install.sh  install_simple.sh  js_analyzer.py  page_analyzer.py  payguard_comprehensive_test_results.json  payguard_crossplatform.py  payguard_enhanced.py  payguard_menubar_optimized.py  payguard_unified.py  payguard_windows.py  pyproject.toml  requirements.txt  setup.py  setup_linux.sh  simple_backend.py  test_applescript.py  test_regex.py
backend/: auth.py  risk_engine.py  server.py  url_reputation.py
docs/: ACQUISITION_PLAN.md  COMMERCIAL_POLICY_TEMPLATES.md  DEPLOY_PRODUCTION_CHECKLIST.md  DPA.md  INCIDENT_RESPONSE_POLICY.md  LAUNCH_PLAN.md  SALES_PLAYBOOK.md  SLA.md  TERMS_OF_SERVICE.md
models/: js_xgboost_v1.model  url_xgboost_v2.model
monitoring/prometheus/: alerts.yml
tests/: dataset.json  evaluate_detection.py  test_payguard_menubar_unit.py  test_risk_engine.py  test_server.py
website/src/app/: page.tsx
