[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "payguard"
version = "1.0.0"
description = "AI-powered phishing and scam detection for macOS"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}

dependencies = [
    "rumps>=0.4.0",
    "httpx>=0.27.0",
    "xgboost>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "Pillow>=10.0.0",
    "requests>=2.28.0",
    "joblib>=1.3.0",
]

[project.scripts]
payguard = "payguard.detector:main"
